test/data/resolver/valid/optional_multi_type_union.cypher
OPTIONAL MATCH (p:Person)-[r:AUTHORED|LIKES]->(post:Post) RETURN r
