test/data/resolver/invalid/unknown_edge_multi_type_all_miss.cypher
MATCH (p:Person)-[r:KNOWS|LIKES]->(post:Post) RETURN r
